Fix checkbox alignment

--- a/assets/css/editor.scss
+++ b/assets/css/editor.scss
@@ -50,6 +50,7 @@
 
 // Selectors with extra specificity to override some editor styles.
 .woocommerce-search-list__list.woocommerce-search-list__list {
+	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
 }
